<resources>
    <string name="app_name">FireBirds</string>
    <string name="google_maps">AIzaSyBE8aTOw9qgYLKy0P_rXkwrLC3upS_BUQg</string>
    <string name="facebook_app_id">160072854720882</string>
    <string name="fb_login_protocol_scheme">fb160072854720882</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_fb">FaceBook</string>
    <string name="sign_google">Google</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="sign_up">New hire? Sign Up</string>

    <string name="hello_blank_fragment">fragment</string>
    <string name="register_fragment">Hello Register</string>
    <string name="btn_register">Register</string>
    <string name="btn_home">Back</string>
    <string name="btn_sing_out">Sing out</string>
    <string name="btn_add_bird">Add bird</string>
    <string name="btn_update_bird">Update</string>
    <string name="edth_bird_name">Name of bird</string>
    <string name="edth_bird_breed">Bird Breed</string>
    <string name="btn_delete_bird">Delete</string>
    <string name="msg_delete_bird">Are you shore?</string>
    <string name="msg_ok_delete">Yes</string>
    <string name="msg_no_delete">No</string>
    <string name="snak_add_bird">Bird has by added</string>
    <string name="snak_action_add_bird">Add new bird?</string>

    <string name="gender_choise">Gender</string>
    <string name="edth_bird_birth">Bird year of birth</string>
    <string name="no_data">Empty</string>

    <string name="dialog_father_bird">Name of Father</string>
    <string name="dialog_mather_bird">Mather</string>
    <string name="dialog_pair_bird">Pair</string>

    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="logout">Log out</string>
    <string name="account_data">User Data</string>
    <string name="other_collection_recyler">Other Collections</string>
    <string name="my_collection">My collection</string>
    <string name="reg_name">Name</string>
    <string name="reg_pass">Password</string>
    <string name="reg_pass_confirm">Confirn Password</string>
    <string name="reg_city">City</string>
    <string name="reg_country">Country</string>
    <string name="btnAnswerQuestion">Answer</string>
    <string name="header_forgot_pass">Forgot Password</string>
    <string name="hint_answer">Answer Secret</string>
</resources>
