<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/header_forgot_pass"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtl_answer"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_answer" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:layout_weight="1"
            android:text="@string/btnAnswerQuestion" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>