<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrey.firebirds.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/ic_user" />

    <EditText
        android:id="@+id/edt_login"
        android:layout_width="215dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorBackgroundLogin"
        android:drawableLeft="@drawable/ic_login"
        android:drawablePadding="15dip"
        android:ems="10"
        android:gravity="fill_vertical"
        android:hint="@string/hint_login"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="215dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:background="@color/colorBackgroundLogin"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="15dip"
        android:ems="10"
        android:gravity="fill_vertical"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_sing_in"
        android:layout_width="215dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorSignIn"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="10sp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook_login"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/google_plus"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_google_plus"
        android:drawablePadding="-65dip"
        android:paddingLeft="40dp"
        android:text="@string/sign_google"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="215dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgot_pass"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>